@@ -1,46 +1,52 @@
 package com.group4.service.imp;
 
 import java.io.File;
+import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
 import com.group4.service.FileManagerService;
 
+import jakarta.servlet.ServletContext;
+
 @Service
 public class FileManagerServiceImp implements FileManagerService{
 	
+	@Autowired
+	ServletContext app;
+	
+	private Path getPath(String folder, String name) {
+		File dir = Paths.get(app.getRealPath("/dynamic/image/"),folder).toFile();
+		if(!dir.exists()) {
+			dir.mkdirs();
+		}
+		return Paths.get(dir.getAbsolutePath(), name);	
+	}
+	
 	@Override
-	public byte[] read(String path,String name) {
+	public byte[] read(String folder,String name) {
+		Path path = this.getPath(folder, name);
 		try {
-			// Sử dụng ClassPathResource để truy cập vào file trong resources
-			ClassPathResource resource = new ClassPathResource(path+"/"+name);
-			InputStream inputStream = resource.getInputStream();
-			return inputStream.readAllBytes();
-		} catch (Exception e) {
+			return Files.readAllBytes(path);
+		} catch (IOException e) {
 			throw new RuntimeException(e);
 		}
 	}
-
+	
 	@Override
-	public File save(String path, MultipartFile file) {
+	public void save(String folder, MultipartFile file) {
+		Path path = this.getPath(folder, file.getOriginalFilename());
 		try {
-			//Tạo đường dẫn để lưu ảnh
-			String resourcePath = new File("src/main/resources"+path).getAbsolutePath();
-			File directory = new File(resourcePath);
-			//Kiểm tra thư mục để lưu ảnh có tồn tại chưa
-			if(!directory.exists()) {
-				directory.mkdirs();
-			}
-			//Ghi file vào đường dẫn đã định
-			File destinationFile = new File(directory,file.getOriginalFilename());
-			file.transferTo(destinationFile);
-			return destinationFile;
-		}catch (Exception e) {
-			throw new RuntimeException("Error saving file",e);
+			file.transferTo(path);
+		} catch (IOException e) {
+			throw new RuntimeException(e);
 		}
 	}
 	
